# NationsGloryApiProxy

./: Cargo.toml  README.md
src/: endpoints.rs  main.rs  utils.rs  worker.rs
static/: index.html
