[package]
name = "NGApiProxy"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
tokio = { version = "1", features = ["full"] }
redis = { version = "0.29.2", features = ["tokio-native-tls-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.15", features = ["json"] }
dashmap = "6.1.0"
dotenv = "0.15.0"